force-app/main/default/objects/Exception__c/fields/Center_Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Center_Donation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Center Donation Type for this Exception</description>
    <label>Center Donation Type</label>
    <referenceTo>Center_Donation_Type__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>