force-app/main/default/objects/Exception__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Donation Type associated with this Donation Exception</description>
    <label>Donation Type</label>
    <referenceTo>Donation_Type__c</referenceTo>
    <relationshipLabel>Exceptions</relationshipLabel>
    <relationshipName>Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>