force-app/main/default/objects/Exception__c/fields/Increment__c.field-meta.xml
<CustomField>
    <fullName>Increment__c</fullName>
    <label>Increment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>