force-app/main/default/objects/Exception__c/fields/Max_Payment__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment__c</fullName>
    <label>Max Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>