force-app/main/default/objects/Exception__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount in currency of the payment for a given exception event</description>
    <label>Payment</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>