force-app/main/default/objects/Exception__c/fields/Payment_Text__c.field-meta.xml
<CustomField>
    <fullName>Payment_Text__c</fullName>
    <description>This will be included on the Payment sent to the Donor</description>
    <inlineHelpText>Description of Payment Exception SENT TO DONOR</inlineHelpText>
    <label>Payment Text</label>
    <type>TextArea</type>
</CustomField>