force-app/main/default/objects/Exception__c/fields/Policy_Description__c.field-meta.xml
<CustomField>
    <fullName>Policy_Description__c</fullName>
    <description>Explanation of policy regarding exception type payment</description>
    <inlineHelpText>INTERNAL ONLY explanation of policy regarding exception type payment</inlineHelpText>
    <label>Policy Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>