force-app/main/default/objects/Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Payment__c</columns>
    <columns>Max_Payment__c</columns>
    <columns>Increment__c</columns>
    <columns>Policy_Description__c</columns>
    <columns>Payment_Text__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>